--- a/index.css
+++ b/index.css
@@ -57,7 +57,8 @@ body {
     color: var(--text-color);
 }
 
-.li--leftNav {
+.li--hasMenu {
+    z-index: 1;
     position: relative;
     cursor: pointer;
     transition: all .5s ease;
@@ -68,13 +69,12 @@ body {
     opacity: 100%;
 }
 
-.li--leftNav:hover::after,
-.li--leftNav:focus::after {
+.li--hasMenu:hover::after,
+.li--hasMenu:focus::after {
     content: "";
     position: absolute;
     border: 1px solid var(--text-color);
-    left: 0;
-    top: 1rem;
+    bottom: 35%;
 }
 
 .li--hidden--main {
@@ -95,84 +95,80 @@ body {
     -webkit-box-shadow: 0px 9px 20px 5px rgba(80, 80, 80, 0.46);
     box-shadow: 0px 9px 20px 5px rgba(80, 80, 80, 0.46);
     border-radius: .3rem;
+    clip-path: circle(0% at 5% 5%);
+    transition: all .5s ease;
 }
 
-.ul--hidden>.li--hidden>.a--hidden {
+.a--hidden {
     font-size: .9rem;
     font-family: 'Ubuntu', sans-serif;
     color: var(--background-body-blue);
 }
 
-.li--hidden--main:nth-child(4) {
-    opacity: 100%;
-    left: 6.5rem;
-    cursor: default;
-    clip-path: circle(0% at 5% 5%);
+.a--footer,
+.a--ul--leftNav,
+.a--rightNav {
+    color: var(--text-color);
 }
 
-.li--hidden--main:nth-child(2) {
-    opacity: 100%;
-    cursor: default;
-    clip-path: circle(0% at 5% 5%);
+.li--hidden--main:nth-child(4) {
+    left: 6.5rem;
 }
 
 .li--hidden--main:nth-child(6) {
     left: 14rem;
-    opacity: 100%;
-    cursor: default;
-    clip-path: circle(0% at 5% 5%);
 }
 
 .ul--hidden {
     list-style: none;
 }
 
-.li--leftNav:hover>.svg--arrow,
-.li--leftNav:focus>.svg--arrow {
+.li--hasMenu {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.li--hasMenu:hover>.svg--arrow,
+.li--hasMenu:focus>.svg--arrow {
     rotate: 180deg;
 }
 
-.li--leftNav:nth-child(1):hover::after,
-.li--leftNav:nth-child(1):focus::after {
+.li--productMenu:hover::after,
+.li--productMenu:focus::after {
     width: 5.5ch;
 }
 
-.li--leftNav:nth-child(3):hover::after,
-.li--leftNav:nth-child(3):focus::after {
+.li--companyMenu:hover::after,
+.li--companyMenu:focus::after {
     width: 6.3ch;
 }
 
-.li--leftNav:nth-child(5):hover::after,
-.li--leftNav:nth-child(5):focus::after {
+.li--connectMenu:hover::after,
+.li--connectMenu:focus::after {
     width: 5.7ch;
 }
 
-.li--leftNav:nth-child(1):hover+.li--leftNav,
-.li--leftNav:nth-child(1):focus+.li--leftNav {
-    clip-path: circle(100%);
-}
-
-.li--leftNav:nth-child(3):hover+.li--leftNav,
-.li--leftNav:nth-child(3):focus+.li--leftNav {
-    clip-path: circle(100%);
-}
-
-.li--leftNav:nth-child(5):hover+.li--leftNav,
-.li--leftNav:nth-child(5):focus+.li--leftNav {
+.li--hasMenu:hover+.li--leftNav>.ul--hidden,
+.li--hasMenu:focus+.li--leftNav>.ul--hidden {
     clip-path: circle(100%);
 }
 
 .a {
     opacity: 75%;
     display: inline-block;
-    color: var(--text-color);
     font-family: var(--main-font);
     text-decoration: none;
     cursor: pointer;
 }
 
-.li {
-    opacity: 75%;
+.a:hover,
+.a:focus {
+    opacity: 100%;
+}
+
+.a--ul--leftNav {
+    opacity: 100%;
 }
 
 .h1 {
@@ -256,10 +252,6 @@ body {
 .a.whiteFilled {
     background-color: var(--text-color);
     color: var(--primary-red);
-}
-
-.li--rightNav:nth-child(2) {
-    opacity: 100%;
 }
 
 .whiteFilled,
